1、修改我的图标 2、修复无法通过HttpClinet访问api的问题

--- a/src/MusicPlayerOnline.Maui/Pages/DesktopShell.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/DesktopShell.xaml
@@ -28,7 +28,7 @@
                   ContentTemplate="{DataTemplate pages:MyFavoritePage}" />
     
     <ShellContent Title="{Binding Settings.Title}"
-                  Icon="{AppThemeBinding Light=setting.png, Dark=setting_dark.png}" 
+                  Icon="{AppThemeBinding Light=my.png, Dark=my.png}" 
                   ContentTemplate="{DataTemplate pages:SettingsPage}" />
 
 </Shell>
