--- a/src/MusicPlayerOnline.Maui/Pages/SettingsPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/SettingsPage.xaml
@@ -5,10 +5,65 @@
              xmlns:controls="clr-namespace:MusicPlayerOnline.Maui.Controls"
              x:Class="MusicPlayerOnline.Maui.Pages.SettingsPage"
              Title="设置">
+
+    <ContentPage.Resources>
+        <Style x:Key="LoginBlock" TargetType="StackLayout">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsLoginOk}" Value="true" TargetType="StackLayout">
+                    <Setter Property="IsVisible" Value="false"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding IsLoginOk}" Value="false" TargetType="StackLayout">
+                    <Setter Property="IsVisible" Value="true"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="UserInfoBlock" TargetType="StackLayout">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsLoginOk}" Value="true" TargetType="StackLayout">
+                    <Setter Property="IsVisible" Value="true"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding IsLoginOk}" Value="false" TargetType="StackLayout">
+                    <Setter Property="IsVisible" Value="false"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </ContentPage.Resources>
+
     <StackLayout Margin="16">
-        <StackLayout VerticalOptions="Start">
-            <Label Text="账号"></Label>
-            <Label Text="昵称"></Label>
+        <StackLayout VerticalOptions="Start"
+                     Margin="0,10,0,10">
+            <StackLayout Style="{DynamicResource LoginBlock}">
+                <Entry Text="{Binding LoginUsername}"
+                       Placeholder="请输入用户名"
+                       Margin="0,0,0,10"/>
+                <Entry Text="{Binding LoginPassword}"
+                       Placeholder="密码"
+                       IsPassword="True"
+                       Margin="0,0,0,10"/>
+                <HorizontalStackLayout Margin="0,10,0,10">
+                    <Button Text="登录"
+                        Margin="0,0,10,0"
+                        Command="{Binding LoginCommand}"/>
+                    <Button Text="注册"
+                        Command="{Binding GoToRegisterCommand}"/>
+                </HorizontalStackLayout>
+
+            </StackLayout>
+            <StackLayout Style="{DynamicResource UserInfoBlock}"
+                         Margin="0,10,0,10">
+                <Label Text="{Binding UserInfo.Username}"
+                       Margin="0,0,0,10"/>
+                <Label Text="{Binding UserInfo.Nickname}"
+                       Margin="0,0,0,10"/>
+                <Label Text="{Binding UserInfo.Avatar}"
+                       Margin="0,0,0,10"/>
+
+                <StackLayout Margin="0,10,0,0">
+                    <Button Text="退出账号"         
+                            Command="{Binding LogoutCommand}"/>
+                </StackLayout>
+            </StackLayout>
         </StackLayout>
         <ScrollView VerticalOptions="FillAndExpand">
             <Grid RowDefinitions="auto,auto,auto,auto,auto,auto,auto,auto,auto,auto,auto,auto,auto,auto"
