--- a/src/MusicPlayerOnline.Maui/Pages/RegisterPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/RegisterPage.xaml
@@ -4,20 +4,18 @@
              x:Class="MusicPlayerOnline.Maui.RegisterPage"
              Title="注册">
 
-
     <ContentPage.Resources>
         <Style x:Key="RegisterButton" TargetType="Button">
             <Style.Triggers>
-                <DataTrigger Binding="{Binding RegisterSucceed}" Value="true" TargetType="Button">
-                    <Setter Property="IsVisible" Value="false"/>
-                </DataTrigger>
-                <DataTrigger Binding="{Binding RegisterSucceed}" Value="false" TargetType="Button">
+                <DataTrigger Binding="{Binding IsShowRegister}" Value="true" TargetType="Button">
                     <Setter Property="IsVisible" Value="true"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding IsShowRegister}" Value="false" TargetType="Button">
+                    <Setter Property="IsVisible" Value="false"/>
                 </DataTrigger>
             </Style.Triggers>
         </Style>
     </ContentPage.Resources>
-
 
     <StackLayout Margin="16">
         <Entry Text="{Binding Username}"
@@ -34,6 +32,16 @@
                        Placeholder="确认密码"
                        IsPassword="True"
                        Margin="0,0,0,10"/>
+        <HorizontalStackLayout Margin="0,0,0,10">
+            <Label Text="头像"
+                   VerticalTextAlignment="Center"
+                   Margin="0,0,10,0"/>
+            <Image Source="{Binding MyImage}"
+                   WidthRequest="48"
+                   Margin="0,0,10,0"/>
+            <Button Text="上传"
+                    Command="{Binding ChoseImageCommand}"/>
+        </HorizontalStackLayout>
 
         <HorizontalStackLayout Margin="0,10,0,20">
             <Button Text="注册"       
