--- a/src/MusicPlayerOnline.Maui/Pages/SettingsPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/SettingsPage.xaml
@@ -50,19 +50,28 @@
                 </HorizontalStackLayout>
 
             </StackLayout>
-            <StackLayout Style="{DynamicResource UserInfoBlock}"
-                         Margin="0,10,0,10">
-                <Label Text="{Binding UserInfo.Username}"
-                       Margin="0,0,0,10"/>
-                <Label Text="{Binding UserInfo.Nickname}"
-                       Margin="0,0,0,10"/>
-                <Label Text="{Binding UserInfo.Avatar}"
-                       Margin="0,0,0,10"/>
-
-                <StackLayout Margin="0,10,0,0">
-                    <Button Text="退出账号"         
-                            Command="{Binding LogoutCommand}"/>
-                </StackLayout>
+            <StackLayout Style="{DynamicResource UserInfoBlock}"                        
+                         Margin="0,10,0,20">
+                <Grid RowDefinitions="32,32"
+                      ColumnDefinitions="74,*">
+                    <Image Grid.ColumnSpan="2" 
+                           Source="{Binding UserInfo.Avatar}"
+                           WidthRequest="64"
+                           HeightRequest="64"/>
+                    <Label Grid.Row="0" 
+                           Grid.Column="1"
+                           Margin="0,5,0,0"
+                           Text="{Binding UserInfo.Nickname}"
+                           VerticalTextAlignment="Start"/>
+                    <Label Grid.Row="1"
+                           Grid.Column="1" 
+                           Margin="0,0,0,5"
+                           Text="{Binding UserInfo.Username,StringFormat='{}用户名：{0}'}"
+                           VerticalTextAlignment="End"/>
+                </Grid>
+                <Button Text="退出账号" 
+                        Margin="0,10,0,0"
+                        Command="{Binding LogoutCommand}"/>
             </StackLayout>
         </StackLayout>
         <ScrollView VerticalOptions="FillAndExpand">
